@@ -116,3 +116,15 @@
 // Monster Mercenaries
 // Wild Rose
 1965,8201,5	//MS_BASH
+// M_GAMEMASTER
+2000,8226,1	//MER_REGAIN
+2000,8227,1	//MER_TENDER
+2000,8238,5	//MER_KYRIE
+2000,8239,5	//MER_BLESSING
+2000,8240,5	//MER_INCAGI
+// F_GAMEMASTER
+2001,8226,1	//MER_REGAIN
+2001,8227,1	//MER_TENDER
+2001,8238,5	//MER_KYRIE
+2001,8239,5	//MER_BLESSING
+2001,8240,5	//MER_INCAGI
